lang/macro/tests/ui/fail/S-04-non-storage-ink-impls.stderr
error: ink! impl blocks need to be implemented for the #[ink(storage)] struct
  --> $DIR/S-04-non-storage-ink-impls.rs:26:10
   |
26 |     impl NonStorageStruct {
   |          ^^^^^^^^^^^^^^^^
